# hermes-evenhub-bridge

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  __init__.py  __main__.py  _bootstrap.py  adapter.py  after-install.md  asr.py  cli.py  config.py  connections.py  hooks.py  net.py  plugin.yaml  protocol.py  pyproject.toml  requirements.txt  server.py  session_items.py  setup_flow.py  status.py  tool_labels.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
asr/: __init__.py  fluidaudio.py  ipc.py  sidecar_install.py  state.py  whisper.py
dashboard/: manifest.json  plugin_api.py
docs/: architecture.md  configuration.md  faq.md  protocol.md  repository-governance.md  tailscale-serve-setup-plan.md
scripts/: apply-github-governance.sh  render-diagrams.sh
sidecar/: Package.swift  README.md
tests/: conftest.py  test_adapter_inbound.py  test_adapter_lifecycle.py  test_adapter_sessions.py  test_adapter_stream.py  test_adapter_voice.py  test_asr.py  test_asr_ipc.py  test_asr_protocol.py  test_asr_state.py  test_bootstrap.py  test_cli.py  test_cli_asr.py  test_config.py  test_connections.py  test_dashboard_manifest.py  test_env_enablement.py  test_fallback.py  test_fluidaudio_backend.py  test_hooks.py  test_load_active.py  test_net.py  test_plugin_api.py  test_protocol.py  test_register.py  test_registry.py  test_server.py  test_session_items.py  test_setup_flow.py  test_sidecar_install.py  test_status.py  test_status_asr.py  test_status_integration.py  (+1 more)
(+12 files in other folders)
